k8s/admin-portal-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-portal-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-portal
  template:
    metadata:
      labels:
        app: admin-portal
    spec:
      containers:
        - name: admin-portal
          image: sunnyjaiswal22/nic-asdd-lms-admin-portal
---
apiVersion: v1
kind: Service
metadata:
  name: admin-portal-srv
spec:
  selector:
    app: admin-portal
  ports:
    - name: admin-portal
      protocol: TCP
      port: 4200
      targetPort: 4200
